[metadata]
name = oss_song2
version = 0.0.1
author = minseoksong
author_email = thdlstjrj@naver.com
description = oss_song's first package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DoNalD-A/oss_song2

[options]
packages = find:
python_requires = >=3.6

[options.package_data]
* = LICENSE

[options.entry_points]
console_scripts =
    oss_song2 = oss_song2.test:main
